--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,3 @@
-body {
-    background: #f2f2f2;
-}
-
 button {
     border: none;
     cursor: pointer;
@@ -11,57 +7,56 @@ div {
     background: none !important;
 }
 
-.container {
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
+
+
+.grid-container {
+    grid-template-areas:
+        ". . . . . . ."
+        ". . . header . settings ."
+        ". . . . . . ."
+        ". . . buttons . . ."
+        ". . . . . . ."
+        ". . . . . . ."
+        "footer . . . . . ."
+        ". . . . . . .";
 }
 
-.item {
-    display: run-in;
-    justify-self: center;
+.settings {
+    grid-area: settings;
 }
 
-.button {
-    height: 20rem;
-    width: 20rem;
-    background: #fff;
-    font-size: 2rem;
-    border-radius: 1rem;
-    border: 1px solid rgba(0,0,0,0.4);
-    box-shadow: 1rem 1rem rgba(20,20,20,0.4);
+.settings img {
+    width: 3rem;
+    height: 3rem;
+    margin: 1rem;
     transition-duration: 0.2s;
-    text-transform: lowercase;
 }
 
-.button-container {
-    order: 2;
+.settings:hover img {
+    width: 3.5rem;
+    height: 3.5rem;
+    margin: 0.75rem;
+    filter: invert(100%) drop-shadow(0.5rem 0.5rem rgba(0,0,0,0.2));
+}
+
+.buttons-container {
+    grid-area: buttons;
     display: grid;
+    height: 100%;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 2rem;
     align-self: center;
-    width: 97%;
+    align-items: stretch;
+    justify-items: stretch;
 }
 
-.button:hover {
-    height: 22rem;
-    width: 22rem;
+.header:hover {
     font-size: 3rem;
     box-shadow: 1.1rem 1.1rem 0.2rem rgba(20,20,20,0.4);
-    background: rgba(100,100,100,1);
-    border: 2px solid rgba(0,0,0,1);
+    background: rgba(100,100,100,1) !important;
+    outline: 2px solid rgba(0,0,0,1);
     text-shadow: 1rem 1rem rgba(0,0,0,0.2);
     color: white;
     z-index: 2;
+    cursor: pointer;
 }
-
-/* .button1:hover {
-    background: rgba(0,255,124,0.2);
-}
-
-.button2:hover {
-    background: rgba(0,124,255,0.2);
-}
-
-.button3:hover {
-    background: rgba(255,124,0,0.2);
-} */
