--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,26 +3,87 @@
 * {
     font-family: 'Raleway', sans-serif;
     text-transform: lowercase;
-}
-
-div {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-}
-
-h1 {
-    text-align: center;
-    border: 1px solid rgba(0,0,0,0.4);
-    border-radius: 1rem;
-    align-self: center;
-    padding: 5rem;
-    background: #fff;
-    box-shadow: 1rem 1rem rgba(20,20,20,0.4);
-    text-transform: lowercase;
+    padding: 0;
+    margin: 0;
 }
 
 body {
     background: #f2f2f2;
+    text-transform: lowercase;
+}
+
+.standout {
+    background: #fff;
+    font-size: 2rem;
+    border-radius: 1rem;
+    border: 1px solid rgba(0,0,0,0.4);
+    box-shadow: 1rem 1rem rgba(20,20,20,0.4);
+}
+
+.grid-container {
+    overflow-x: hidden;
+    display: grid;
+    width: 100vw;
+    height: 100vh;
+    grid-template-columns: 2rem 5rem 2rem 1fr 2rem 5rem 2rem;
+    grid-template-rows: 5rem 5rem 10rem 20rem 1fr 2rem 4rem 1.5rem;
+    justify-items: stretch;
+    align-items: stretch;
+}
+
+.button {
+    transition-duration: 0.2s;
+    text-transform: lowercase;
+}
+
+.button:hover {
+    font-size: 3rem;
+    box-shadow: 1.1rem 1.1rem 0.2rem rgba(20,20,20,0.4);
+    background: rgba(100,100,100,1) !important;
+    outline: 2px solid rgba(0,0,0,1);
+    text-shadow: 1rem 1rem rgba(0,0,0,0.2);
+    color: white;
+    z-index: 2;
+    cursor: pointer;
+}
+
+.footer {
+    display: flex;
+    align-content: stretch;
+    flex-grow: 1;
+    justify-content: right;
+    grid-area: footer;
+    grid-column: 2 / span 5;
+}
+.footer h1 {
+    margin-right: 1rem;
+    color: rgba(0,0,0,0.6);
+    font-size: 1rem !important;
+    line-height: 1.5rem;
+    align-self: center;
+    vertical-align: middle;
+    text-align: right;
+}
+
+.header {
+    background: #fff !important;
+    grid-area: header;
+    width: 50%;
+    height: 100%;
+    align-self: center;
+    justify-self: center;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-grow: 1;
+    text-align: center;
+    transition-duration: 0.2s;
+}
+
+.header h1 {
+    vertical-align: middle;
+    font-size: 3rem;
+    text-align: center;
+    align-self: center;
     text-transform: lowercase;
 }
