--- a/src/css/summary.css
+++ b/src/css/summary.css
@@ -1,178 +1,125 @@
-#chartContainer {
-    padding: 5rem;
-    width: 30rem;
-    height: 30rem;
-    border-radius: 1rem;
-    background: #fff;
-    overflow:hidden;
-}
-
-.button {
-    height: 4rem;
-    width: 20rem;
-    background: #fff;
-    font-size: 2rem;
-    border-radius: 1rem;
-    border: 1px solid rgba(0,0,0,0.4);
-    box-shadow: 1rem 1rem rgba(20,20,20,0.4);
-    transition-duration: 0.2s;
-    text-transform: lowercase;
-    align-self: flex-start;
-    justify-self: flex-start;
-}
-
-.button:hover {
-    cursor:pointer;
-    font-size: 2rem;
-    box-shadow: 1.1rem 1.1rem 0.2rem rgba(20,20,20,0.4);
-    background: rgba(100,100,100,1);
-    border: 2px solid rgba(0,0,0,1);
-    text-shadow: 0.5rem 0.5rem rgba(0,0,0,0.2);
-    color: white;
-    z-index: 2;
-}
-
-h1 {
-    text-align: center;
-    border: 1px solid rgba(0,0,0,0.4);
-    border-radius: 1rem;
-    align-self: center;
-    padding: 5rem;
-    background: #fff;
-    box-shadow: 1rem 1rem rgba(20,20,20,0.4);
-    text-transform: lowercase;
-}
-
-.container {
-    display: flex;
-    flex-flow: column wrap;
-    align-content: center;
-    justify-content: center;
-    height: 100%;
-    width: 97%;
-    row-gap: 1rem;
-}
-
-.item {
-    background: #fff;
-    padding: 2rem;
-    font-size: 2rem;
-    border-radius: 1rem;
-    border: 1px solid rgba(0,0,0,0.4);
-    box-shadow: 1rem 1rem rgba(20,20,20,0.4);
-    transition-duration: 0.2s;
-    text-transform: lowercase;
-}
-
 .grid-container {
+    grid-template-columns: 2rem 5rem 2rem 1fr 2rem 5rem 2rem;
+    grid-template-rows: 5rem 5rem 10rem 1fr 2rem 4rem 1.5rem;
+    grid-template-areas:
+        ". . . . . . ."
+        ". home . header . . ."
+        ". . . . . . ."
+        ". . . charts-container . . ."
+        ". . . . . . ."
+        "footer . . . . . ."
+        ". . . . . . .";
+}
+
+.home {
+    grid-area: home;
+}
+
+.home img {
+    width: 3rem;
+    height: 3rem;
+    margin: 1rem;
+    transition-duration: 0.2s;
+}
+
+.home:hover img {
+    width: 3.5rem;
+    height: 3.5rem;
+    margin: 0.75rem;
+    filter: invert(100%) drop-shadow(0.5rem 0.5rem rgba(0,0,0,0.2));
+}
+
+.charts-container {
+    grid-area: charts-container;
     display: grid;
-    width: 97%;
-    grid-template-rows: 40rem 40rem 40rem;
-    grid-template-columns: 40rem 40rem;
-    grid-column-gap: 5rem;
-    grid-row-gap: 5rem;
+    grid-template-columns: 50vw;
+    grid-auto-rows: 50vw;
+    grid-row-gap: 2rem;
+    grid-template-areas:
+        "chart1"
+        "chart2"
+        "chart3"
+        "chart4";
     justify-content: center;
 }
 
-.grid-container div {
-    justify-self: stretch;
-    align-self: stretch;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    justify-items: center;
-    align-items: center;
-}
-
-.grid-container div canvas:hover{
-    cursor: pointer;
+.chart {
+    padding: 0.5rem;
 }
 
 #monthly-expenses-container {
-    grid-column: 1 / span 1;
-    grid-row: 1 / span 1;
+    grid-area: chart1;
 }
 
 #montly-expenses-list {
-    grid-column: 2 / span 1;
-    grid-row: 1 / span 1;
+    grid-area: chart2;
     background: #fff;
 }
 
 .table-container {
-    background: none !important;
-    width: 100%;
-    height: 38rem;
-    padding: 0;
-}
-
-#monthly-expenses-list table {
-    top: -2rem;
-    background: none;
-    height: 85%;
-    width: 100%;
+    grid-area: chart2;
     font-size: 1.2rem;
     display: block;
     border-collapse: collapse;
-    margin-bottom: 3rem;
-    padding: 0;
     overflow: auto;
 }
 
-#monthly-expenses-list table::-webkit-scrollbar {
+.table-container table {
+    border-collapse: collapse;
+    width: 100%;
+    margin: 0;
+}
+
+.table-container::-webkit-scrollbar {
     width: 1rem;
     border-radius: 1rem;
 }
 
-#monthly-expenses-list table::-webkit-scrollbar-track {
+.table-container::-webkit-scrollbar-track {
     background: #fff;
     border-radius: 1rem;
 }
 
-#monthly-expenses-list table::-webkit-scrollbar-thumb {
+.table-container::-webkit-scrollbar-thumb {
     background: #ddd;
     border-radius: 1rem;
 }
 
-#monthly-expenses-list thead {
+.table-container table thead {
     background: none;
     border-collapse: collapse;
 }
 
-#monthly-expenses-list thead tr {
+.table-container table thead tr {
     border-bottom: 1px solid rgba(0,0,0,0.2);
 }
 
-#monthly-expenses-list thead tr th {
-    padding-bottom: 1rem;
+.table-container table thead tr th {
+    padding: 1rem 0;
 }
 
-#monthly-expenses-table tr {
+.table-container table tbody tr {
     border-bottom: 1px solid rgba(0,0,0,0.2);
 }
-#monthly-expenses-table tr td {
-    padding: 0.5rem;
+.table-container table tbody tr td {
+    padding: 0.5rem 0.5rem 0.5rem 1rem;
 }
-#monthly-expenses-table tr:last-child {
+.table-container table tbody tr:last-child {
     background-color: #f2f2f2;
     border-bottom: none;
 }
-#monthly-expenses-table tr:last-child td:first-of-type {
+.table-container table tbody tr:last-child td:first-of-type {
     text-align: right;
     border-right: 2px solid rgba(0,0,0,0.2);
 }
-#monthly-expenses-table tr:last-child td:last-of-type {
+.table-container table tbody tr:last-child td:last-of-type {
     text-align: left;
 }
 
-
-
 #chart2-container {
-    grid-column: 1 / span 1;
-    grid-row: 2 / span 1;
+    grid-area: chart3;
 }
 
 #chart3-container {
-    grid-column: 2 / span 1;
-    grid-row: 2 / span 1;
+    grid-area: chart4;
 }
