--- a/src/css/edit.css
+++ b/src/css/edit.css
@@ -1,28 +1,128 @@
-.button {
-    height: 4rem;
-    width: 20rem;
-    background: #fff;
-    font-size: 2rem;
-    border-radius: 1rem;
-    border: 1px solid rgba(0,0,0,0.4);
-    box-shadow: 1rem 1rem rgba(20,20,20,0.4);
-    transition-duration: 0.2s;
-    text-transform: lowercase;
-    align-self: flex-start;
-    justify-self: flex-start;
-}
-
-.button:hover {
-    cursor:pointer;
-    font-size: 2rem;
-    box-shadow: 1.1rem 1.1rem 0.2rem rgba(20,20,20,0.4);
-    background: rgba(100,100,100,1);
-    border: 2px solid rgba(0,0,0,1);
-    text-shadow: 0.5rem 0.5rem rgba(0,0,0,0.2);
-    color: white;
-    z-index: 2;
-}
-
 .grid-container {
-    
+    grid-template-columns: 2rem 5rem 2rem 1fr 2rem 5rem 2rem;
+    grid-template-rows: 5rem 5rem 2rem 5rem 2rem 1fr 2rem 4rem 1.5rem;
+    grid-template-areas:
+        ". . . . . . ."
+        ". home . header . . ."
+        ". . . . . . ."
+        ". . . picker . . ."
+        ". . . . . . ."
+        ". . . table . . ."
+        ". . . . . . ."
+        "footer . . . . . ."
+        ". . . . . . .";
+}
+
+.home {
+    grid-area: home;
+}
+
+.home img {
+    width: 3rem;
+    height: 3rem;
+    margin: 1rem;
+    transition-duration: 0.2s;
+}
+
+.home:hover img {
+    width: 3.5rem;
+    height: 3.5rem;
+    margin: 0.75rem;
+    filter: invert(100%) drop-shadow(0.5rem 0.5rem rgba(0,0,0,0.2));
+}
+
+.picker {
+    grid-area: picker;
+    padding: 0.5rem;
+    width: 25vw;
+    justify-self: center;
+}
+
+.table-container {
+    grid-area: table;
+}
+
+.button-container {
+    display: grid;
+    border-radius: 1rem;
+    height: 4rem;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: stretch;
+    justify-items: stretch;
+    background: rgba(100,100,100,1);
+}
+
+.picker-item {
+    background: none;
+    border-radius: 1rem;
+    border: none;
+    cursor: pointer;
+    color: white;
+    font-size: 1.5rem;
+    transition-duration: 0.2s;
+}
+
+.picker-item:hover{
+    background: rgba(150,150,150,0.5);
+}
+
+.active {
+    background: white;
+    border: 1px solid rgba(0,0,0,1);
+    color: black;
+    transition-duration: 0.2s;
+}
+
+.active:hover {
+    color: black;
+    background: white;
+}
+
+.table-container {
+    grid-area: table;
+    font-size: 1.2rem;
+    display: block;
+    border-collapse: collapse;
+    overflow: auto;
+}
+
+.table-container table {
+    border-collapse: collapse;
+    width: 100%;
+    margin: 0;
+}
+
+.table-container::-webkit-scrollbar {
+    width: 1rem;
+    border-radius: 1rem;
+}
+
+.table-container::-webkit-scrollbar-track {
+    background: #fff;
+    border-radius: 1rem;
+}
+
+.table-container::-webkit-scrollbar-thumb {
+    background: #ddd;
+    border-radius: 1rem;
+}
+
+.table-container table thead {
+    background: none;
+    border-collapse: collapse;
+}
+
+.table-container table thead tr {
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+}
+
+.table-container table thead tr th {
+    padding: 1rem 0;
+}
+
+.table-container table tbody tr {
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+}
+.table-container table tbody tr td {
+    padding: 0.5rem 0.5rem 0.5rem 1rem;
 }
