--- a/src/css/add.css
+++ b/src/css/add.css
@@ -3,12 +3,41 @@
     grid-template-rows: 5rem 5rem 10rem 1fr 2rem 4rem 1.5rem;
     grid-template-areas:
         ". . . . . . ."
-        ". home . header . . ."
+        ". . . header . home ."
         ". . . info . . ."
         ". . . form . . ."
         ". . . . . . ."
         "footer . . . . . ."
         ". . . . . . ."
+}
+
+#new-type {
+    grid-area: select;
+    padding: 0 2rem 0 2rem;
+    font-size: 2rem;
+    visibility: hidden;
+    z-index: 2;
+    transition-duration: 0.2s;
+}
+
+#save-type {
+    grid-area: add;
+    visibility: hidden;
+    z-index: 2;
+}
+
+#save-type img {
+    width: 3rem;
+    height: 3rem;
+    margin: 1rem;
+    transition-duration: 0.2s;
+}
+
+#save-type:hover img {
+    width: 3.5rem;
+    height: 3.5rem;
+    margin: 0.75rem;
+    filter: invert(100%) drop-shadow(0.5rem 0.5rem rgba(0,0,0,0.2));
 }
 
 #info {
@@ -170,10 +199,4 @@ input[type=submit]:hover {
     text-shadow: 0.5rem 0.5rem rgba(0,0,0,0.2);
     color: white;
     z-index: 2;
-}
-
-input[type=submit]::after {
-    background: white;
-    color: black;
-    text-decoration: none;
 }
